--- a/index.html
+++ b/index.html
@@ -10,35 +10,72 @@
 
 <style>
 /* ===== PRELOADER ===== */
-#preloader{position:fixed;width:100%;height:100%;background:#000;display:flex;justify-content:center;align-items:center;z-index:2000;}
-.loader{width:60px;height:60px;border:5px solid #111;border-top:5px solid #00f2ff;border-radius:50%;animation:spin 1s linear infinite;}
+#preloader{
+  position:fixed;width:100%;height:100%;
+  background:#000;
+  display:flex;justify-content:center;align-items:center;
+  z-index:2000;
+}
+.loader{
+  width:60px;height:60px;
+  border:5px solid #111;
+  border-top:5px solid #00f2ff;
+  border-radius:50%;
+  animation:spin 1s linear infinite;
+}
 @keyframes spin{100%{transform:rotate(360deg);}}
 
 /* ===== GENERAL ===== */
 *{margin:0;padding:0;box-sizing:border-box;scroll-behavior:smooth;}
-body{font-family:'Poppins', sans-serif;background:#0b0b0f;color:#fff;overflow-x:hidden;}
+body{
+  font-family:'Poppins', sans-serif;
+  background:#0b0b0f;
+  color:#fff;
+  overflow-x:hidden;
+  opacity:0;
+  animation:pageFade 1s ease forwards;
+}
+@keyframes pageFade{to{opacity:1;}}
 #particles-js{position:fixed;width:100%;height:100%;z-index:-1;}
 
-/* NAVBAR */
-nav{position:fixed;width:100%;padding:20px 20px;display:flex;align-items:center;background:rgba(0,0,0,0.6);backdrop-filter:blur(10px);z-index:1000;justify-content:space-between;}
-.logo-container{display:flex;align-items:center;gap:10px;}
+/* ===== NAVBAR ===== */
+nav{
+  position:fixed;width:100%;padding:20px 20px;
+  display:flex;align-items:center;
+  background:rgba(0,0,0,0.6);
+  backdrop-filter:blur(10px);
+  z-index:1000;justify-content:space-between;
+  transform:translateY(-80px);opacity:0;
+  animation:navDrop 1s ease forwards;animation-delay:0.3s;
+}
+@keyframes navDrop{to{transform:translateY(0);opacity:1;}}
+.logo-container{
+  display:flex;align-items:center;gap:10px;
+  transform:scale(0.8);opacity:0;
+  animation:logoPop 1s ease forwards;animation-delay:0.6s;
+}
+@keyframes logoPop{to{transform:scale(1);opacity:1;}}
 .logo{font-family:'Orbitron', sans-serif;font-weight:700;color:#00f2ff;text-shadow:0 0 20px #00f2ff;font-size:24px;}
 .logo-container img{width:80px;height:80px;object-fit:contain;}
 .nav-right{display:flex;align-items:center;gap:30px;}
 nav ul{list-style:none;display:flex;gap:30px;}
 nav ul li{cursor:pointer;}
-nav ul li a{color:#ffffff;font-weight:500;text-decoration:none;text-shadow:0 0 8px #00f2ff,0 0 15px #00f2ff;transition:0.3s;}
+nav ul li a{color:#fff;font-weight:500;text-decoration:none;text-shadow:0 0 8px #00f2ff,0 0 15px #00f2ff;transition:0.3s;}
 nav ul li a:hover{color:#00f2ff;text-shadow:0 0 15px #00f2ff,0 0 25px #00f2ff;}
 .social-icons{display:flex;align-items:center;gap:15px;}
 .social-icons a{color:#fff;font-size:28px;}
 .menu-toggle{display:none;font-size:25px;cursor:pointer;}
 
-/* HERO & SECTIONS */
-section{padding:120px 10%;display:none;}
+/* ===== SECTIONS ===== */
+section{padding:100px 10% 60px;display:none;}
 section.active{display:block;}
-.hero{display:flex;justify-content:space-between;align-items:center;min-height:100vh;flex-wrap:wrap;text-align:center;}
-.hero img{width:100%;max-width:330px;border-radius:40px;box-shadow:0 0 40px #00f2ff;}
-.hero-text{max-width:600px;margin:auto;}
+
+/* ===== HERO ===== */
+.hero{display:flex;justify-content:space-between;align-items:center;min-height:calc(100vh - 100px);flex-wrap:wrap;text-align:center;}
+.hero img{width:100%;max-width:330px;border-radius:40px;box-shadow:0 0 40px #00f2ff;transform:translateX(-80px);opacity:0;animation:imageSlide 1.2s ease forwards;animation-delay:0.8s;}
+@keyframes imageSlide{to{transform:translateX(0);opacity:1;}}
+.hero-text{max-width:600px;margin:auto;transform:translateX(80px);opacity:0;animation:textSlide 1.2s ease forwards;animation-delay:1s;}
+@keyframes textSlide{to{transform:translateX(0);opacity:1;}}
 .hero-text h1{font-family:'Orbitron', sans-serif;font-size:45px;color:#00f2ff;text-shadow:0 0 20px #00f2ff;margin-bottom:10px;}
 .main-tagline{font-size:20px;margin-bottom:20px;}
 
@@ -46,30 +83,42 @@ section.active{display:block;}
 .roles{display:flex;justify-content:space-between;align-items:center;width:100%;max-width:500px;margin:0 auto 20px auto;flex-wrap:nowrap;}
 .roles span{display:inline-block;white-space:nowrap;font-weight:bold;font-size:16px;color:#00f2ff;text-shadow:0 0 8px #00f2ff;}
 
-/* BUTTONS */
+/* ===== BUTTONS ===== */
 .btn{display:inline-block;padding:12px 25px;border:2px solid #00f2ff;border-radius:30px;text-decoration:none;color:#00f2ff;margin-right:15px;transition:0.3s;}
 .btn:hover{background:#00f2ff;color:#000;box-shadow:0 0 20px #00f2ff;}
 
-/* VIDEO */
-.video-section{text-align:center;margin-top:30px;}
-.video-section h2{color:#00f2ff;text-shadow:0 0 15px #00f2ff;margin-bottom:20px;}
-video{width:100%;max-width:800px;border-radius:20px;box-shadow:0 0 40px #00f2ff;}
+/* ===== ANIME VIDEO GRID ===== */
+#anime .video-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:20px;}
+.video-item{background:#111;border-radius:15px;overflow:hidden;box-shadow:0 0 20px #00f2ff;display:flex;flex-direction:column;position:relative;}
+.video-item video{width:100%;border-radius:15px 15px 0 0;}
+.video-info{padding:10px;display:flex;flex-direction:column;}
+.video-desc{max-height:50px;overflow:hidden;text-overflow:ellipsis;margin-bottom:5px;transition:max-height 0.3s;}
+.video-desc.expanded{max-height:500px;}
+.toggle-desc{cursor:pointer;color:#00f2ff;font-size:14px;text-align:right;margin-bottom:5px;}
+.reactions{display:flex;gap:5px;margin-bottom:5px;flex-wrap:wrap;position:relative;}
+.reactions span{cursor:pointer;font-size:20px;position:relative;}
+.show-more-emoji{cursor:pointer;color:#00f2ff;font-size:14px;display:block;margin-left:5px;}
+.comment-box{margin-top:5px;display:flex;flex-direction:column;max-height:40vh;}
+.comment-box input{width:100%;padding:5px;border-radius:5px;border:none;outline:none;margin-bottom:5px;}
+.comment-list{max-height:40vh;overflow-y:auto;background:#111;padding:5px;border-radius:5px;}
 
-/* RESPONSIVE */
-@media(max-width:900px){.hero{flex-direction:column;text-align:center;}nav ul{position:absolute;top:70px;right:10%;background:#111;flex-direction:column;width:200px;display:none;padding:20px;}nav ul.active{display:flex;}.menu-toggle{display:block;}}
+/* ===== VIDEO SECTION HEADERS ===== */
+.video-section h2{color:#00f2ff;text-shadow:0 0 15px #00f2ff;margin-bottom:20px;}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:900px){.hero{flex-direction:column;text-align:center;}nav ul{position:absolute;top:70px;right:10%;background:#111;flex-direction:column;width:200px;display:none;padding:20px;}.menu-toggle{display:block;}}
 @media(max-width:600px){.hero img{max-width:200px;}.hero-text h1{font-size:28px;}.main-tagline{font-size:16px;}.roles{max-width:300px;gap:10px;}.roles span{font-size:14px;}.btn{padding:8px 18px;font-size:14px;margin-right:10px;}.social-icons a{font-size:22px;}.logo{font-size:20px;}.logo-container img{width:60px;height:60px;}}
 </style>
 </head>
-
 <body>
+
 <div id="preloader"><div class="loader"></div></div>
 <div id="particles-js"></div>
 
-<!-- ===== NAVBAR ===== -->
 <nav>
   <div class="logo-container">
     <div class="logo">ALeGoClash YT</div>
-    <img src="AG-logo.png" alt="ALeGo Logo" onerror="this.style.display='none'; console.warn('Logo image not found!')">
+    <img src="AG-logo.png" alt="Logo">
   </div>
 
   <div class="nav-right">
@@ -81,21 +130,22 @@ video{width:100%;max-width:800px;border-radius:20px;box-shadow:0 0 40px #00f2ff;
       <li data-section="states"><a>States</a></li>
     </ul>
     <div class="social-icons">
-      <a href="https://youtube.com/@alego.yt.1?si=XtP1cVgfQVzOeWl0"><i class="fab fa-youtube"></i></a>
-      <a href="https://www.facebook.com/share/1C4XhCpoLL/"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-youtube"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-tiktok"></i></a>
       <span class="menu-toggle" onclick="toggleMenu()"><i class="fas fa-bars"></i></span>
     </div>
   </div>
 </nav>
 
-<!-- ===== SECTIONS ===== -->
 <section id="home" class="active">
 <div class="hero">
-<img src="anaspic.jpg" alt="ALeGo Image">
+<img src="anaspic.jpg" alt="Image">
 <div class="hero-text">
 <h1>Welcome To ALeGO World</h1>
-<div class="main-tagline">Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥</div>
+<div class="main-tagline">
+Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥
+</div>
 <div class="roles">
 <span>Video Editor</span>
 <span>Content Creator</span>
@@ -107,41 +157,84 @@ video{width:100%;max-width:800px;border-radius:20px;box-shadow:0 0 40px #00f2ff;
 </div>
 </section>
 
-<section id="gaming">
-<h2>Gaming Section</h2>
-<div class="video-section">
-<video controls>
-<source src="" type="video/mp4">
-</video>
-</div>
-</section>
-
 <section id="anime">
 <h2>Anime Section</h2>
-<div class="video-section">
-<video controls>
-<source src="" type="video/mp4">
-</video>
-</div>
+<div class="video-grid" id="anime-grid"></div>
 </section>
 
-<section id="marvel">
-<h2>Marvel Section</h2>
-<div class="video-section">
-<video controls>
-<source src="" type="video/mp4">
-</video>
-</div>
-</section>
+<!-- Firebase SDK -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
-<section id="states">
-<h2>States Section</h2>
-<div class="video-section">
-<video controls>
-<source src="" type="video/mp4">
-</video>
-</div>
-</section>
+const firebaseConfig = {
+  apiKey: "AIzaSyDHa6ehG1vQoodbxNDfJuEN0UUg2Ymv-1s",
+  authDomain: "alegoclashyt.firebaseapp.com",
+  projectId: "alegoclashyt",
+  storageBucket: "alegoclashyt.appspot.com",
+  messagingSenderId: "199878543888",
+  appId: "1:199878543888:web:1d964fa5a1830111925895",
+  measurementId: "G-15ZKJXPSWS"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+const animeGrid = document.getElementById("anime-grid");
+const emojis=["😂","🤩","🥲","🤨","😬","😐","😔","🥶","🤯","🥳","😎","😭","😈","💀","☠️","😤","❤️‍🔥","💔","🤍","💯","👌","👍","🤲","👏","👀","🔥","♥️"];
+
+async function loadVideos(){
+  const q = query(collection(db,"videos"),orderBy("timestamp"));
+  const snapshot = await getDocs(q);
+  snapshot.forEach(docSnap=>{
+    const v = docSnap.data();
+    const item = document.createElement('div');
+    item.className='video-item';
+    item.innerHTML=`
+      <video src="${v.src}" controls></video>
+      <div class="video-info">
+        <div class="video-desc">${v.desc}</div>
+        <div class="toggle-desc">Show More ▼</div>
+        <div class="reactions"></div>
+        <div class="show-more-emoji">▼ More</div>
+        <div class="comment-box">
+          <input type="text" placeholder="Add a comment...">
+          <div class="comment-list"></div>
+        </div>
+      </div>
+    `;
+    animeGrid.appendChild(item);
+
+    // Toggle description
+    const toggle = item.querySelector('.toggle-desc');
+    const desc = item.querySelector('.video-desc');
+    toggle.addEventListener('click',()=>{desc.classList.toggle('expanded');toggle.textContent=desc.classList.contains('expanded')?'Show Less ▲':'Show More ▼';});
+
+    // Reactions
+    const reactionsDiv = item.querySelector('.reactions');
+    emojis.slice(0,3).forEach(e=>{
+      const span = document.createElement('span');
+      span.textContent=e;
+      span.addEventListener('click',async ()=>{
+        await addDoc(collection(db,"reactions"),{video:v.src,emoji:e,timestamp:Date.now()});
+      });
+      reactionsDiv.appendChild(span);
+    });
+
+    // Comments
+    const input = item.querySelector('.comment-box input');
+    const commentList = item.querySelector('.comment-list');
+    input.addEventListener('keypress',async e=>{
+      if(e.key==='Enter' && input.value.trim()!==''){
+        await addDoc(collection(db,"comments"),{video:v.src,text:input.value,timestamp:Date.now()});
+        const div=document.createElement('div');div.textContent=input.value;commentList.appendChild(div);
+        input.value='';
+      }
+    });
+  });
+}
+loadVideos();
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
@@ -153,22 +246,11 @@ particlesJS("particles-js",{
 "particles":{"number":{"value":80},"color":{"value":"#00f2ff"},"shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":3},"line_linked":{"enable":true,"distance":150,"color":"#00f2ff","opacity":0.4,"width":1},"move":{"enable":true,"speed":3}}
 });
 
-function toggleMenu(){
-  document.getElementById("menu").classList.toggle("active");
-}
+const tabs=document.querySelectorAll('#menu li');
+const sections=document.querySelectorAll('section');
+tabs.forEach(tab=>{tab.addEventListener('click',()=>{const target=tab.getAttribute('data-section');sections.forEach(sec=>sec.classList.remove('active'));document.getElementById(target).classList.add('active');window.scrollTo(0,0);});});
 
-// ===== Switch Sections =====
-const tabs = document.querySelectorAll('#menu li');
-const sections = document.querySelectorAll('section');
-
-tabs.forEach(tab => {
-  tab.addEventListener('click', () => {
-    const target = tab.getAttribute('data-section');
-    sections.forEach(sec => sec.classList.remove('active'));
-    document.getElementById(target).classList.add('active');
-    window.scrollTo(0,0);
-  });
-});
+function toggleMenu(){document.getElementById("menu").classList.toggle("active");}
 </script>
 
 </body>
