--- a/index.html
+++ b/index.html
@@ -10,50 +10,20 @@
 
 <style>
 /* ===== PRELOADER ===== */
-#preloader{
-  position:fixed;width:100%;height:100%;
-  background:#000;
-  display:flex;justify-content:center;align-items:center;
-  z-index:2000;
-}
-.loader{
-  width:60px;height:60px;
-  border:5px solid #111;
-  border-top:5px solid #00f2ff;
-  border-radius:50%;
-  animation:spin 1s linear infinite;
-}
+#preloader{position:fixed;width:100%;height:100%;background:#000;display:flex;justify-content:center;align-items:center;z-index:2000;}
+.loader{width:60px;height:60px;border:5px solid #111;border-top:5px solid #00f2ff;border-radius:50%;animation:spin 1s linear infinite;}
 @keyframes spin{100%{transform:rotate(360deg);}}
 
 /* ===== GENERAL ===== */
 *{margin:0;padding:0;box-sizing:border-box;scroll-behavior:smooth;}
-body{
-  font-family:'Poppins', sans-serif;
-  background:#0b0b0f;
-  color:#fff;
-  overflow-x:hidden;
-  opacity:0;
-  animation:pageFade 1s ease forwards;
-}
+body{font-family:'Poppins', sans-serif;background:#0b0b0f;color:#fff;overflow-x:hidden;opacity:0;animation:pageFade 1s ease forwards;}
 @keyframes pageFade{to{opacity:1;}}
 #particles-js{position:fixed;width:100%;height:100%;z-index:-1;}
 
 /* ===== NAVBAR ===== */
-nav{
-  position:fixed;width:100%;padding:20px 20px;
-  display:flex;align-items:center;
-  background:rgba(0,0,0,0.6);
-  backdrop-filter:blur(10px);
-  z-index:1000;justify-content:space-between;
-  transform:translateY(-80px);opacity:0;
-  animation:navDrop 1s ease forwards;animation-delay:0.3s;
-}
+nav{position:fixed;width:100%;padding:20px 20px;display:flex;align-items:center;background:rgba(0,0,0,0.6);backdrop-filter:blur(10px);z-index:1000;justify-content:space-between;transform:translateY(-80px);opacity:0;animation:navDrop 1s ease forwards;animation-delay:0.3s;}
 @keyframes navDrop{to{transform:translateY(0);opacity:1;}}
-.logo-container{
-  display:flex;align-items:center;gap:10px;
-  transform:scale(0.8);opacity:0;
-  animation:logoPop 1s ease forwards;animation-delay:0.6s;
-}
+.logo-container{display:flex;align-items:center;gap:10px;transform:scale(0.8);opacity:0;animation:logoPop 1s ease forwards;animation-delay:0.6s;}
 @keyframes logoPop{to{transform:scale(1);opacity:1;}}
 .logo{font-family:'Orbitron', sans-serif;font-weight:700;color:#00f2ff;text-shadow:0 0 20px #00f2ff;font-size:24px;}
 .logo-container img{width:80px;height:80px;object-fit:contain;}
@@ -67,10 +37,7 @@ nav ul li a:hover{color:#00f2ff;text-shadow:0 0 15px #00f2ff,0 0 25px #00f2ff;}
 .menu-toggle{display:none;font-size:25px;cursor:pointer;}
 
 /* ===== SECTIONS ===== */
-section{
-  padding:140px 10% 80px; /* مسافة أكبر تحت الناف */
-  display:none;
-}
+section{padding:140px 10% 80px;display:none;}
 section.active{display:block;}
 
 /* ===== HERO ===== */
@@ -81,49 +48,27 @@ section.active{display:block;}
 @keyframes textSlide{to{transform:translateX(0);opacity:1;}}
 .hero-text h1{font-family:'Orbitron', sans-serif;font-size:45px;color:#00f2ff;text-shadow:0 0 20px #00f2ff;margin-bottom:10px;}
 .main-tagline{font-size:20px;margin-bottom:20px;}
-
-/* ===== ROLES ===== */
 .roles{display:flex;justify-content:space-between;align-items:center;width:100%;max-width:500px;margin:0 auto 20px auto;flex-wrap:nowrap;}
 .roles span{display:inline-block;white-space:nowrap;font-weight:bold;font-size:16px;color:#00f2ff;text-shadow:0 0 8px #00f2ff;}
-
-/* ===== BUTTONS ===== */
 .btn{display:inline-block;padding:12px 25px;border:2px solid #00f2ff;border-radius:30px;text-decoration:none;color:#00f2ff;margin-right:15px;transition:0.3s;}
 .btn:hover{background:#00f2ff;color:#000;box-shadow:0 0 20px #00f2ff;}
 
-/* ===== ANIME VIDEO GRID ===== */
-#anime .video-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:20px;}
-.video-item{background:#111;border-radius:15px;overflow:hidden;box-shadow:0 0 20px #00f2ff;display:flex;flex-direction:column;}
-.video-item video{width:100%;border-radius:15px 15px 0 0;}
-.video-info{padding:10px;display:flex;flex-direction:column;}
-.video-desc{max-height:50px;overflow:hidden;text-overflow:ellipsis;margin-bottom:5px;transition:max-height 0.3s;}
-.video-desc.expanded{max-height:500px;}
-.toggle-desc{cursor:pointer;color:#00f2ff;font-size:14px;text-align:right;margin-bottom:5px;}
+/* ===== VIDEO GRID ===== */
+.video-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:20px;}
+.video-card{cursor:pointer;border-radius:15px;overflow:hidden;box-shadow:0 0 20px #00f2ff;transition:0.3s;}
+.video-card img{width:100%;display:block;}
+.video-card:hover{transform:scale(1.05);}
 
-/* ===== VIDEO SECTION HEADERS ===== */
-#anime h2{
-  color:#00f2ff;
-  text-shadow:0 0 15px #00f2ff;
-  margin-bottom:40px;
-  margin-top:20px;
-}
+/* ===== MODAL ===== */
+.video-modal{position:fixed;inset:0;background:rgba(0,0,0,0.85);display:flex;justify-content:center;align-items:center;z-index:3000;opacity:0;pointer-events:none;transition:0.3s;}
+.video-modal.active{opacity:1;pointer-events:auto;}
+.modal-content{width:90%;max-width:900px;position:relative;}
+.modal-content iframe{width:100%;height:500px;border-radius:15px;}
+.close-modal{position:absolute;top:-40px;right:0;font-size:30px;cursor:pointer;}
 
 /* ===== RESPONSIVE ===== */
-@media(max-width:900px){
-  .hero{flex-direction:column;text-align:center;}
-  nav ul{position:absolute;top:70px;right:10%;background:#111;flex-direction:column;width:200px;display:none;padding:20px;}
-  .menu-toggle{display:block;}
-}
-@media(max-width:600px){
-  .hero img{max-width:200px;}
-  .hero-text h1{font-size:28px;}
-  .main-tagline{font-size:16px;}
-  .roles{max-width:300px;gap:10px;}
-  .roles span{font-size:14px;}
-  .btn{padding:8px 18px;font-size:14px;margin-right:10px;}
-  .social-icons a{font-size:22px;}
-  .logo{font-size:20px;}
-  .logo-container img{width:60px;height:60px;}
-}
+@media(max-width:900px){.hero{flex-direction:column;text-align:center;}nav ul{position:absolute;top:70px;right:10%;background:#111;flex-direction:column;width:200px;display:none;padding:20px;}.menu-toggle{display:block;}.video-grid{grid-template-columns:repeat(2,1fr);}.modal-content iframe{height:300px;}}
+@media(max-width:600px){.hero img{max-width:200px;}.hero-text h1{font-size:28px;}.main-tagline{font-size:16px;}.roles{max-width:300px;gap:10px;}.roles span{font-size:14px;}.btn{padding:8px 18px;font-size:14px;margin-right:10px;}.social-icons a{font-size:22px;}.logo{font-size:20px;}.logo-container img{width:60px;height:60px;}}
 </style>
 </head>
 <body>
@@ -136,7 +81,6 @@ section.active{display:block;}
     <div class="logo">ALeGoClash YT</div>
     <img src="AG-logo.png" alt="Logo">
   </div>
-
   <div class="nav-right">
     <ul id="menu">
       <li data-section="home"><a>Home</a></li>
@@ -173,20 +117,38 @@ Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥
 </div>
 </section>
 
+<section id="gaming">
+<h2>Gaming Section</h2>
+<div class="video-grid" id="gaming-grid"></div>
+</section>
+
 <section id="anime">
 <h2>Anime Section</h2>
 <div class="video-grid" id="anime-grid"></div>
 </section>
 
+<section id="marvel">
+<h2>Marvel Section</h2>
+<div class="video-grid" id="marvel-grid"></div>
+</section>
+
+<section id="states">
+<h2>States Section</h2>
+<p>Content for States goes here...</p>
+</section>
+
+<!-- ===== MODAL ===== -->
+<div class="video-modal" id="videoModal">
+  <div class="modal-content">
+    <span class="close-modal" onclick="closeVideo()">&times;</span>
+    <iframe id="videoFrame" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-window.addEventListener("load",()=>{
-  document.getElementById("preloader").style.display="none";
-});
-
-particlesJS("particles-js",{
-"particles":{"number":{"value":80},"color":{"value":"#00f2ff"},"shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":3},"line_linked":{"enable":true,"distance":150,"color":"#00f2ff","opacity":0.4,"width":1},"move":{"enable":true,"speed":3}}
-});
+window.addEventListener("load",()=>{document.getElementById("preloader").style.display="none";});
+particlesJS("particles-js",{"particles":{"number":{"value":80},"color":{"value":"#00f2ff"},"shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":3},"line_linked":{"enable":true,"distance":150,"color":"#00f2ff","opacity":0.4,"width":1},"move":{"enable":true,"speed":3}}});
 
 function toggleMenu(){document.getElementById("menu").classList.toggle("active");}
 const tabs=document.querySelectorAll('#menu li');
@@ -200,42 +162,51 @@ tabs.forEach(tab=>{
   });
 });
 
-/* ===== ANIME VIDEOS DYNAMIC GRID ===== */
+/* ===== ARRAYS OF VIDEOS ===== */
+const gamingVideos=[
+  {id:'VIDEO_ID_1', desc:'Gaming Video 1'},
+  {id:'VIDEO_ID_2', desc:'Gaming Video 2'},
+  {id:'VIDEO_ID_3', desc:'Gaming Video 3'},
+  {id:'VIDEO_ID_4', desc:'Gaming Video 4'}
+];
 const animeVideos=[
-  {src:'video1.mp4',desc:'Description for video 1'},
-  {src:'video2.mp4',desc:'Description for video 2'},
-  {src:'video3.mp4',desc:'Description for video 3'},
-  {src:'video4.mp4',desc:'Description for video 4'},
-  {src:'video5.mp4',desc:'Description for video 5'},
-  {src:'video6.mp4',desc:'Description for video 6'}
+  {id:'VIDEO_ID_1', desc:'Anime Video 1'},
+  {id:'VIDEO_ID_2', desc:'Anime Video 2'},
+  {id:'VIDEO_ID_3', desc:'Anime Video 3'},
+  {id:'VIDEO_ID_4', desc:'Anime Video 4'}
+];
+const marvelVideos=[
+  {id:'70pHukpTyhk', desc:'Marvel Video 1'},
+  {id:'VIDEO_ID_2', desc:'Marvel Video 2'},
+  {id:'VIDEO_ID_3', desc:'Marvel Video 3'},
+  {id:'VIDEO_ID_4', desc:'Marvel Video 4'}
 ];
 
-const animeGrid=document.getElementById('anime-grid');
+/* ===== FUNCTION TO GENERATE VIDEO CARDS ===== */
+function generateVideoGrid(array, gridId){
+  const grid=document.getElementById(gridId);
+  array.forEach(v=>{
+    const div=document.createElement('div');
+    div.className='video-card';
+    div.innerHTML=`<img src="https://img.youtube.com/vi/${v.id}/0.jpg" title="${v.desc}">`;
+    div.onclick=()=>openVideo(`https://www.youtube.com/watch?v=${v.id}`);
+    grid.appendChild(div);
+  });
+}
+generateVideoGrid(gamingVideos,'gaming-grid');
+generateVideoGrid(animeVideos,'anime-grid');
+generateVideoGrid(marvelVideos,'marvel-grid');
 
-animeVideos.forEach((v,i)=>{
-  const item=document.createElement('div');
-  item.className='video-item';
-
-  item.innerHTML=`
-    <video src="${v.src}" controls></video>
-    <div class="video-info">
-      <div class="video-desc">${v.desc}</div>
-      <div class="toggle-desc">Show More ▼</div>
-    </div>
-  `;
-  animeGrid.appendChild(item);
-});
-
-/* Toggle descriptions */
-document.addEventListener('click',e=>{
-  if(e.target.classList.contains('toggle-desc')){
-    const desc=e.target.previousElementSibling;
-    desc.classList.toggle('expanded');
-    e.target.textContent=
-      desc.classList.contains('expanded')?
-      'Show Less ▲':'Show More ▼';
-  }
-});
+/* ===== MODAL FUNCTION ===== */
+function openVideo(link){
+  const embedLink = link.replace("watch?v=","embed/");
+  document.getElementById("videoFrame").src = embedLink+"?autoplay=1";
+  document.getElementById("videoModal").classList.add("active");
+}
+function closeVideo(){
+  document.getElementById("videoModal").classList.remove("active");
+  document.getElementById("videoFrame").src="";
+}
 </script>
 
 </body>
