--- a/index.html
+++ b/index.html
@@ -54,10 +54,31 @@ section.active{display:block;}
 .btn:hover{background:#00f2ff;color:#000;box-shadow:0 0 20px #00f2ff;}
 
 /* ===== VIDEO GRID ===== */
-.video-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:20px;}
-.video-card{cursor:pointer;border-radius:15px;overflow:hidden;box-shadow:0 0 20px #00f2ff;transition:0.3s;}
+.video-grid{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap:20px;
+  margin-top:20px;
+}
+.video-card{cursor:pointer;border-radius:15px;overflow:hidden;box-shadow:0 0 20px #00f2ff;transition:0.3s;position:relative;}
 .video-card img{width:100%;display:block;}
 .video-card:hover{transform:scale(1.05);}
+
+/* ===== VIDEO DESCRIPTION TOOLTIP ===== */
+.video-card span.desc{
+  position:absolute;
+  bottom:5px;
+  left:50%;
+  transform:translateX(-50%);
+  background:rgba(0,0,0,0.8);
+  padding:5px 8px;
+  border-radius:5px;
+  font-size:12px;
+  display:none;
+  max-width:90%;
+  text-align:center;
+}
+.video-card:hover span.desc{display:block;}
 
 /* ===== MODAL ===== */
 .video-modal{position:fixed;inset:0;background:rgba(0,0,0,0.85);display:flex;justify-content:center;align-items:center;z-index:3000;opacity:0;pointer-events:none;transition:0.3s;}
@@ -65,6 +86,26 @@ section.active{display:block;}
 .modal-content{width:90%;max-width:900px;position:relative;}
 .modal-content iframe{width:100%;height:500px;border-radius:15px;}
 .close-modal{position:absolute;top:-40px;right:0;font-size:30px;cursor:pointer;}
+
+/* Fullscreen button */
+#fullscreenBtn{
+  position:absolute;
+  bottom:10px;
+  right:10px;
+  width:40px;
+  height:40px;
+  border:none;
+  border-radius:50%;
+  background:rgba(0,0,0,0.6);
+  color:#fff;
+  font-size:18px;
+  cursor:pointer;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:4000;
+}
+#fullscreenBtn:hover{background:rgba(0,0,0,0.9);}
 
 /* ===== RESPONSIVE ===== */
 @media(max-width:900px){.hero{flex-direction:column;text-align:center;}nav ul{position:absolute;top:70px;right:10%;background:#111;flex-direction:column;width:200px;display:none;padding:20px;}.menu-toggle{display:block;}.video-grid{grid-template-columns:repeat(2,1fr);}.modal-content iframe{height:300px;}}
@@ -141,7 +182,10 @@ Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥
 <div class="video-modal" id="videoModal">
   <div class="modal-content">
     <span class="close-modal" onclick="closeVideo()">&times;</span>
-    <iframe id="videoFrame" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="videoFrame" src="" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    <button id="fullscreenBtn"><i class="fas fa-expand"></i></button>
   </div>
 </div>
 
@@ -162,42 +206,52 @@ tabs.forEach(tab=>{
   });
 });
 
-/* ===== ARRAYS OF VIDEOS ===== */
-const gamingVideos=[
-  {id:'VIDEO_ID_1', desc:'Gaming Video 1'},
-  {id:'VIDEO_ID_2', desc:'Gaming Video 2'},
-  {id:'VIDEO_ID_3', desc:'Gaming Video 3'},
-  {id:'VIDEO_ID_4', desc:'Gaming Video 4'}
+/* ===== DYNAMIC VIDEO ARRAYS ===== */
+let gamingVideos = [
+  {id:'HK6r1G6wQwI', desc:'Gaming Video 1'},
+  {id:'V6U8kK0fGHQ', desc:'Gaming Video 2'},
+  {id:'qB_RgP1JN9k', desc:'Gaming Video 3'},
+  {id:'41Z1uNFNbzA', desc:'Gaming Video 4'}
 ];
-const animeVideos=[
-  {id:'VIDEO_ID_1', desc:'Anime Video 1'},
-  {id:'VIDEO_ID_2', desc:'Anime Video 2'},
-  {id:'VIDEO_ID_3', desc:'Anime Video 3'},
-  {id:'VIDEO_ID_4', desc:'Anime Video 4'}
+let animeVideos = [
+  {id:'9zIor5qP7b0', desc:'Anime Video 1'},
+  {id:'SMDKFtTVgGI', desc:'Anime Video 2'}
+  
 ];
-const marvelVideos=[
-  {id:'70pHukpTyhk', desc:'Marvel Video 1'},
-  {id:'VIDEO_ID_2', desc:'Marvel Video 2'},
-  {id:'VIDEO_ID_3', desc:'Marvel Video 3'},
-  {id:'VIDEO_ID_4', desc:'Marvel Video 4'}
+let marvelVideos = [
+  {id:'70pHukpTyhk', desc:'Spider-Man'},
+  {id:'GoockRFyx_4', desc:'Marvel Video 2'},
+  {id:'KzMRavXCe9o', desc:'Marvel Video 3'},
+  {id:'NtwCLlILiPc', desc:'Marvel Video 4'},
+  {id:'moVZnIMCm7w', desc:'Marvel Video 5'},
+  {id:'WsLyDwMoZE8', desc:'Marvel Video 6'},
+  {id:'4YoXzgGhqkw', desc:'Marvel Video 7'},
+  {id:'Q09LJCp8MYk', desc:'Marvel Video 8'},
+  {id:'VkAhflXyVtk', desc:'Marvel Video 9'},
+  {id:'IUCWWXf2j5g', desc:'Marvel Video 8'},
+  {id:'8tMQbwnGzMI', desc:'Marvel Video 8'},
+  {id:'HHRREQpht2g', desc:'Marvel Video 8'}
 ];
 
-/* ===== FUNCTION TO GENERATE VIDEO CARDS ===== */
-function generateVideoGrid(array, gridId){
-  const grid=document.getElementById(gridId);
-  array.forEach(v=>{
-    const div=document.createElement('div');
-    div.className='video-card';
-    div.innerHTML=`<img src="https://img.youtube.com/vi/${v.id}/0.jpg" title="${v.desc}">`;
-    div.onclick=()=>openVideo(`https://www.youtube.com/watch?v=${v.id}`);
+/* ===== CREATE GRID AUTOMATICALLY (4 VIDEOS PER ROW) ===== */
+function createVideoGrid(videos, gridId){
+  const grid = document.getElementById(gridId);
+  grid.innerHTML = "";
+  videos.forEach(v => {
+    const div = document.createElement('div');
+    div.className = 'video-card';
+    div.innerHTML = `<img src="https://img.youtube.com/vi/${v.id}/0.jpg" title="${v.desc}"><span class="desc">${v.desc}</span>`;
+    div.onclick = () => openVideo(`https://www.youtube.com/watch?v=${v.id}`);
     grid.appendChild(div);
   });
 }
-generateVideoGrid(gamingVideos,'gaming-grid');
-generateVideoGrid(animeVideos,'anime-grid');
-generateVideoGrid(marvelVideos,'marvel-grid');
 
-/* ===== MODAL FUNCTION ===== */
+/* ===== GENERATE ALL GRIDS ===== */
+createVideoGrid(gamingVideos,'gaming-grid');
+createVideoGrid(animeVideos,'anime-grid');
+createVideoGrid(marvelVideos,'marvel-grid');
+
+/* ===== MODAL FUNCTIONS ===== */
 function openVideo(link){
   const embedLink = link.replace("watch?v=","embed/");
   document.getElementById("videoFrame").src = embedLink+"?autoplay=1";
@@ -207,6 +261,21 @@ function closeVideo(){
   document.getElementById("videoModal").classList.remove("active");
   document.getElementById("videoFrame").src="";
 }
+
+/* ===== FULLSCREEN BUTTON ===== */
+const fullscreenBtn = document.getElementById('fullscreenBtn');
+fullscreenBtn.addEventListener('click', () => {
+  const modal = document.querySelector('.video-modal');
+  if (modal.requestFullscreen) {
+    modal.requestFullscreen();
+  } else if (modal.mozRequestFullScreen) {
+    modal.mozRequestFullScreen();
+  } else if (modal.webkitRequestFullscreen) {
+    modal.webkitRequestFullscreen();
+  } else if (modal.msRequestFullscreen) {
+    modal.msRequestFullscreen();
+  }
+});
 </script>
 
 </body>
